# zediz

./: .env.example  .gitignore  AGENTS.md  Caddyfile  Cargo.toml  Dockerfile.agent  Dockerfile.controlplane  Dockerfile.web  PLAN_DRIFTBASE.md  PLAN_ZEDIZ.md  README.md  docker-compose.yml  fix-codex-notify.sh  justfile
.codex/: config.toml.bak
.github/workflows/: agent-image.yml  controlplane-image.yml  deploy.yml  edge-image.yml  release.yml  web-image.yml
crates/agent/: Cargo.toml
crates/agent/src/: build.rs  caddy.rs  cancel.rs  client.rs  console.rs  docker.rs  executor.rs  main.rs  private_network.rs  self_update.rs
crates/common/: Cargo.toml
crates/common/src/: telemetry.rs
crates/controlplane/: Cargo.toml
crates/controlplane/migrations/: 0001_init.sql  0007_service_domains.sql  0008_agent_update_routes.sql  0009_builds_and_git_services.sql  0010_root_dir_and_railpack.sql  0011_deployment_runtime_metrics.sql  0012_deployment_metrics_history.sql  0014_volumes.sql
crates/controlplane/src/: agent_updates.rs  config.rs  crypto.rs  db.rs  error.rs  main.rs  migration.rs  private_network.rs  rate_limit.rs  scheduler.rs  state.rs
crates/controlplane/src/admin/: mod.rs  routes.rs
crates/controlplane/src/agent/: commands.rs  routes.rs  tokens.rs
crates/controlplane/src/auth/: extractor.rs  mod.rs  password.rs  routes.rs  session.rs
crates/controlplane/src/builds/: mod.rs  routes.rs
crates/controlplane/src/console/: bridge.rs  mod.rs  routes.rs
crates/controlplane/src/credentials/: mod.rs  routes.rs
crates/controlplane/src/deployments/: mod.rs  routes.rs
crates/controlplane/src/domains/: mod.rs  routes.rs
crates/controlplane/src/entity/: mod.rs
crates/controlplane/src/github_app/: mod.rs  routes.rs
crates/controlplane/src/migration/: initial_schema.sql
crates/controlplane/src/nodes/: routes.rs
crates/controlplane/src/projects/: mod.rs  routes.rs
crates/controlplane/src/provisioner/: cloud_init.rs  hetzner.rs
crates/controlplane/src/registry_proxy/: mod.rs
crates/controlplane/src/services/: mod.rs  references.rs  routes.rs
crates/controlplane/src/ssh_keys/: mod.rs  routes.rs
crates/controlplane/src/volumes/: mod.rs  routes.rs
crates/controlplane/src/workspaces/: invites.rs  membership.rs  mod.rs  routes.rs
crates/hetzner/: Cargo.toml
crates/hetzner/src/: lib.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
docker/: .gitkeep  agent.Dockerfile  controlplane.Dockerfile
registry/: entrypoint.sh
web/: index.html  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
web/src/components/: ThemeToggle.tsx  command-palette.tsx  create-volume-sheet.tsx  domains-section.tsx  env-reference-input.tsx  new-service-sheet.tsx  service-console.tsx  service-metrics.tsx  service-settings.tsx  service-volume.tsx  ui.tsx
web/src/components/board/: board-canvas.tsx  board-inspector.tsx  board-toolbar.tsx  project-sidebar.tsx  service-node.tsx
web/src/lib/: admin.ts  api.ts  auth.ts  board-positions.ts  builds.ts  deployments.ts  domains.ts  github.ts  nodes.ts  projects.ts  services.ts  settings.ts  templates.ts  types.ts  volumes.ts  workspaces.ts
web/src/routes/: __root.tsx  admin.index.tsx  admin.tsx  index.tsx  invite.$token.tsx  login.tsx  pricing.tsx  signup.tsx  w.$workspaceSlug.credentials.tsx  w.$workspaceSlug.index.tsx  w.$workspaceSlug.members.tsx  w.$workspaceSlug.nodes.tsx  w.$workspaceSlug.onboarding.tsx  w.$workspaceSlug.projects.$projectSlug.$serviceSlug.tsx  w.$workspaceSlug.projects.$projectSlug.index.tsx  w.$workspaceSlug.projects.$projectSlug.new.tsx  w.$workspaceSlug.projects.$projectSlug.templates.$templateId.tsx  w.$workspaceSlug.projects.$projectSlug.templates.index.tsx  w.$workspaceSlug.projects.$projectSlug.tsx  w.$workspaceSlug.projects.index.tsx  w.$workspaceSlug.settings.tsx  w.$workspaceSlug.ssh-keys.tsx  w.$workspaceSlug.tsx  w.new.tsx  workspaces.new.tsx
web/src/styles/: tailwind.css
