[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/proto",
    "crates/hetzner",
    "crates/agent",
    "crates/controlplane",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lassejlv/zediz"
rust-version = "1.94"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP / web
axum = { version = "0.7", features = ["macros", "ws"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
hyper = "1"
http = "1"
headers = "0.4"
base64 = "0.22"

# Serde / data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# DB
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "uuid", "json", "migrate"] }

# Crypto / IDs
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
jsonwebtoken = "9"
ulid = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Errors / tracing
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Misc
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
bytes = "1"
once_cell = "1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"

# Docker (agent)
bollard = "0.17"

# Internal
zediz-common = { path = "crates/common" }
zediz-proto = { path = "crates/proto" }
zediz-hetzner = { path = "crates/hetzner" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
