[package]
name = "driftbase-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "driftbase-agent"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
bollard.workspace = true
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
http.workspace = true
driftbase-common.workspace = true
driftbase-proto.workspace = true
