[package]
name = "driftbase-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
ulid.workspace = true
chrono.workspace = true
aes-gcm.workspace = true
rand.workspace = true
sha2.workspace = true
